SRC refactored, no more issues, working correctly

--- a/src/pages/admin/edit-customer/edit-customer.html
+++ b/src/pages/admin/edit-customer/edit-customer.html
@@ -21,7 +21,7 @@
          </ion-item>
          <ion-item>
             <ion-label floating>Phone no</ion-label>
-            <ion-input type="number" [(ngModel)]="customer.phone" name="phone" ></ion-input>
+            <ion-input type="number" [(ngModel)]="customer.phoneNumber" name="phone" ></ion-input>
          </ion-item>
          <ion-item>
             <ion-label floating>Address</ion-label>
