--- a/src/pages/admin/order-list/order-list.html
+++ b/src/pages/admin/order-list/order-list.html
@@ -12,30 +12,31 @@
 <ion-content>
    <ion-spinner *ngIf="!orderList" name="crescent" style="display:block; margin-left: auto; margin-right:auto; margin-top: 5px; margin-bottom:5px" ></ion-spinner>
 <div *ngIf="orderList">
-<ion-list padding>
-  <ion-item tappable *ngFor="let item of orderList">
+<ion-list  class="list-padding">
+  <ion-item no-padding tappable *ngFor="let item of orderList">
   <div (click)="getOrderDetails(item.id)">
     <h2>Name: {{item.customerDetails.displayName}}</h2>
     <p>Email: {{item.customerDetails.email}}</p>
     <p>Payment: {{item.payments.PaymentType}}</p>
+    <p>Delivery Time: {{item.deliveryDate}}</p>
     <p>Total: {{item.total | currency:values.currency:true:'1.2-2'}}</p>
    </div> 
     <br>
     <ion-row>
     <ion-col no-padding>
-         <button ion-button icon-left no-margin clear (click)="deleteOder(item.id)">
+         <button ion-button no-padding icon-left no-margin clear (click)="deleteOder(item.id)">
             <ion-icon ios="ios-trash" md="md-trash"></ion-icon>
             Delete
          </button>
          </ion-col>
          <ion-col no-padding>
-            <button ion-button icon-left no-margin clear>
+            <button ion-button no-padding icon-left no-margin clear>
             <ion-icon style="color: #ffa500;" name="time"></ion-icon>
-            {{item.timeStamp | date}}
+            {{item.deliveryDate | date}}
             </button>
          </ion-col>
          <ion-col no-padding style="text-align: right;">
-         <button ion-button icon-left no-margin clear (click)="getOrderDetails(item.id)">
+         <button ion-button  no-padding icon-left no-margin clear (click)="getOrderDetails(item.id)">
             <ion-icon name="eye" style="color: #ff6868;"></ion-icon>
             View
          </button>
