--- a/src/pages/user/address/address.html
+++ b/src/pages/user/address/address.html
@@ -21,7 +21,7 @@
          </ion-item>
          <ion-item>
             <ion-label floating>Phone no</ion-label>
-            <ion-input type="number" [(ngModel)]="customer.phone" name="phone" ></ion-input>
+            <ion-input type="number" [(ngModel)]="customer.phoneNumber" name="phone" ></ion-input>
          </ion-item>
          <ion-item>
             <ion-label floating>Address</ion-label>
