basic login & cart & app & settings translations added

--- a/src/pages/authentication/login/login.html
+++ b/src/pages/authentication/login/login.html
@@ -39,7 +39,7 @@
           </ion-input><ion-icon name="md-key" item-left></ion-icon>
         </ion-item>
 
-        <h2 tappable (click)="forgotten()">Forgot Password?</h2>
+        <h2 tappable (click)="forgotten()"> {{ "ForgotPassword" | translate }} </h2>
 
       </ion-list>
 
